# ZanChat-App

./: .gitignore
backend/: Cargo.toml  README.md  build.rs  docker-compose.yaml  envoy.yaml
backend/data/: dump.rdb
backend/data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
backend/proto/: textchat.proto
backend/src/: db_access.rs  handlers.rs  lib.rs  text_chat_service.rs  textchat.rs
frontend/: package.json
frontend/src/: App.scss  App.tsx  index.scss  index.tsx
frontend/src/components/chatRoom/: index.module.scss  index.tsx
frontend/src/components/signInPage/: index.module.scss  index.tsx
frontend/src/proto/: TextchatServiceClientPb.ts  textchat_pb.d.ts  textchat_pb.js
