[package]
name = "webrtc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde =  { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.76"
warp = "0.3"
tonic = {version = "0.5.2", features=["tls"]}
prost = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.2"
redis = { version = "0.17.0", features = ["tokio-comp"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.2"

[build-dependencies]
tonic-build = "0.5.2"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]